made errors more visible and fixed timestamps

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -158,3 +158,10 @@ div.error {
   margin: 5px;
   margin-top: 0;
 }
+
+input.error{
+  border: 2px solid var(--error);
+}
+textarea.error{
+  border: 2px solid var(--error);
+}
